gateway/01-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.dev.try.shoot.canary.k8s-hana.ondemand.com"
    tls:
      mode: SIMPLE
      credentialName: wildcard-tls
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.dev.try.shoot.canary.k8s-hana.ondemand.com"
