gateway/02-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1  
kind: VirtualService  
metadata:  
  name: productpage  
  namespace: bookinfo  
spec:  
  hosts:  
  - "product.ingress.test.try.shoot.canary.k8s-hana.ondemand.com"  
  gateways:  
  - istio-system/gateway  
  http:  
  - match:  
    - uri:  
        prefix: "/"  
    route:  
    - destination:  
        host: productpage.bookinfo.svc.cluster.local  
        port:  
          number: 9080
